<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CFD8DC"
    android:orientation="vertical"
    android:weightSum="2">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/LikeInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:text="@string/likes"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/ShareInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="5dp"
            android:text="@string/shares"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:weightSum="3"
        android:padding="10sp">

        <TextView
            android:id="@+id/likeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/Likes"
            android:drawableTop="@drawable/ic_thumb_up"
            android:gravity="center"
            android:contentDescription="@string/Likes"
            />

        <TextView
            android:id="@+id/commentImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:drawableTop="@drawable/ic_comment"
            android:text="@string/Comment"
            android:gravity="center"
            android:contentDescription="@string/Comment"/>

        <TextView
            android:id="@+id/shareImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:drawableTop="@drawable/ic_reply"
            android:text="@string/Share"
            android:gravity="center"
            android:contentDescription="@string/Share"/>

    </LinearLayout>
</LinearLayout>